<resources>
    <string name="app_name">Datos personales</string>
    <string name="nombre_hint">Escriba aquí su nombre</string>
    <string name="nombre" translatable="false"> </string>>
    <string name="apellidos" translatable="false"> </string>
    <string name="edad" translatable="false"> </string>
    <string name="edad_hint">Escriba aquí su edad</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>> /*
    <string name="casado">Casado</string>>
    <string name="separado">Separado</string>>
    <string name="viudo">Viudo</string>>
    <string name="otro">Otro</string>
    <string name="textview1" translatable="false"></string>
    <string name="button1">Información</string>
    <string name="hijos">Hijos:</string>
    <string name="no_si">NO/SÍ</string>>
    <string name="nombre_no">Necesita escribir el nombre</string>
    <string name="apellido_no">Necesita escribir el apellido</string>
    <string name="edad_no">Necesita escribir la edad</string>
    <string name="seleccionaste">Seleccionaste :</string>
    <string name="si_hijos"> con hijos</string>
    <string name="no_hijos"> sin hijos</string>>
    <string name="mayor_edad">Mayor de edad</string>
    <string name="menor_edad">Menor de edad</string>
    <string name="y"> y</string>
    <string name="genero">Usted debe seleccionar su género</string>
    <string name="apellido_hint">Escriba aquí su apellido</string>
    <string name="resetear">Resetear</string>
</resources>
